# Haskell-Torrent-Tracker-and-Search-Engine

./: CHANGELOG.md  MinorProject.cabal  README.md  stack.yaml  trial.html
HaskTorrent/: HaskTorrent.cabal  README.md  package.yaml  stack.yaml
HaskTorrent/app/: Main.hs
HaskTorrent/src/: Api.hs  Lib.hs  Types.hs
HaskTorrent/src/DB/: Access.hs  Search.hs
HaskTorrent/src/Torrent/: Conversions.hs  Instances.hs  Types.hs
HaskTracker/: LICENSE  MinorProject.cabal  README.md
HaskTracker/src/Network/Torrent/Tracker/: AnnounceSrv.hs  AnnounceUDP.hs
HaskTracker/static/styles/: stylesDesc.css  stylesLanding.css  stylesRes.css
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/tmp/src-13048/readable-0.3.1/: CHANGELOG.md
dist-newstyle/tmp/src-13051/typesafe-endian-0.1.0.1/: LICENSE
dist-newstyle/tmp/src-13051/typesafe-endian-0.1.0.1/src/Data/: Endian.hs
dist-newstyle/tmp/src-13051/typesafe-endian-0.1.0.1/src/Data/Endian/: Internal.hs  Unsafe.hs  Wrap.hs
exec/: torrDB-init.hs
hask-react/: .eslintcache  README.md  package.json
hask-react/src/: App.js  index.js
hask-react/src/components/: FileList.js  Header.js  ResultCard.js
hask-react/src/pages/: Error404.js  Search.js  TorrentDesc.js  Upload.js
hask-react/src/static/css/: main.css  main.css.map  main.scss
hask-react/src/static/css/base/: _typography.scss  _variables.scss
hask-react/src/static/css/components/: _common.scss  _filelist.scss  _header.scss  _results.scss  _torrent.scss  _upload.scss
hask-react/src/static/js/: mkDirTree.js
src/Control/Monad/Trans/: ContEither.hs  hie-log
src/Data/Torrent/: DB.hs  Search.hs
src/Data/Torrent/DB/: BsonValueReader.hs  FromBSON.hs  ToBSON.hs
src/Exec/: db-access.hs  hask-tracker.hs  torrdb-init.hs  trial.hs
src/Network/Torrent/Tracker/: AnnounceReqTypes.hs  AnnounceServer.hs  AnnounceSrv.hs  AnnounceUDP.hs  PeerAccess.hs  PeerAccess.hs.bak  QueryParsers.hs  Trial.hs
src/Network/Torrent/Web/: SearchDiv.hs
src/Test/: PeerFinder.hs
static/: search.html  upload.html
static/styles/: stylesUpload.css
