cabal-version:       >=1.10
name:                MinorProject
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Anjan Srihari
maintainer:          anjansrihari14@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  exposed-modules:
       Network.Torrent.Tracker.AnnounceReqTypes,
       Network.Torrent.Tracker.AnnounceServer,
       Network.Torrent.Tracker.AnnounceSrv,
       Control.Monad.Trans.ContEither,
       Network.Torrent.Tracker.PeerAccess,
       Network.Torrent.Tracker.QueryParsers,
       Data.Torrent.DB.ToBSON,
       Data.Torrent.DB.FromBSON,
       Data.Torrent.DB.BsonValueReader

  build-depends:    
      base >= 4.7 && < 5, bytestring,
      bencode >= 0.6, containers,
      unordered-containers, network >= 2.8,
      transformers , binary >= 0.8,
      typesafe-endian >= 0.1,  snap-core >= 1.0,
      cpu , time, saltine, split, 
      mtl , MonadRandom >= 0.5, mongoDB >= 2.7,
      attoparsec >= 0.12, text , time-compat,
      cryptohash == 0.11.9, bson >= 0.3 && < 0.5
  
  hs-source-dirs:      src

  default-language:    Haskell2010
