cabal-version:       >=1.10
name:                MinorProject
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Anjan Srihari
maintainer:          anjansrihari14@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

test-suite PeerFinder
  main-is: Test/PeerFinder.hs
  type: exitcode-stdio-1.0
  hs-source-dirs:      src
  build-depends: 
       base >= 4.7 && < 5,
       containers >= 0.6.0 && < 0.7,
       QuickCheck >= 2.6,
       test-framework >= 0.8,
       test-framework-quickcheck2 >= 0.3,
       unordered-containers >= 0.2.11 && < 0.3,
       bencode              >= 0.6.1 && < 0.7,
       hashable,
       primitive,
       mwc-random,
       transformers,
       bytestring >= 0.10.8 && < 0.11,
       network              >= 3.1.1 && < 3.2,
       attoparsec >= 0.13.2 && < 0.14,
       Crypto >= 4.2,
       binary >= 0.8.6 && < 0.9,
       MonadRandom
  other-modules: Network.Torrent.Tracker.AnnounceReqTypes,
                 Network.Torrent.Tracker.PeerAccess 
  default-language: Haskell2010 

executable torrdb-init
  main-is: Exec/torrdb-init.hs 
  build-depends: 
      base                 >= 4.7   && <   5, 
      mtl                  >= 2.2.2 && < 2.3,
      transformers         >= 0.5.6 && < 0.6,
      text                 >= 1.2.3 && < 1.3,
      mongoDB              >= 2.7.0 && < 2.8,
      process
  default-language: Haskell2010  
  hs-source-dirs: src

executable db-access 
  main-is: Exec/db-access.hs
  hs-source-dirs: src
  default-language: Haskell2010 
  build-depends:  
      base >= 4.7 && < 5, 
      servant-server,
      servant-multipart,
      time-compat,
      cryptonite,
      bson,
      transformers,
      servant-blaze,
      network,
      servant,
      hashable,
      base16-bytestring,
      http-media,
      text,
      blaze-html,
      cryptohash,
      Crypto,
      containers,
      time,
      unordered-containers,
      binary,
      bytestring,
      mtl,
      warp,
      split,
      bencode,
      mongoDB              >= 2.7.0 && < 2.8
  other-modules:
      Data.Torrent.DB,
      Data.Torrent.DB.ToBSON,
      Data.Torrent.DB.FromBSON,
      Data.Torrent.Search,
      Data.Torrent.DB.BsonValueReader,
      Network.Torrent.Tracker.AnnounceReqTypes,
      Network.Torrent.Web.SearchDiv

executable hask-tracker
  main-is: Exec/hask-tracker.hs
  
  other-modules:
       Control.Monad.Trans.ContEither,

       Network.Torrent.Tracker.PeerAccess,
       Network.Torrent.Tracker.AnnounceReqTypes,
       Network.Torrent.Tracker.AnnounceSrv,
       Network.Torrent.Tracker.AnnounceUDP
  
  build-depends:    
      base >= 4.7 && < 5, 
      cryptohash           == 0.11.9, 
      bson                 >= 0.3 && < 0.5,
      Crypto               >= 4.2 && < 5,
      MonadRandom          >= 0.5.2 && < 0.6,
      mtl                  >= 2.2.2 && < 2.3,
      uri-encode,
      warp,
      transformers         >= 0.5.6 && < 0.6,
      bytestring           >= 0.10.8 && < 0.11,
      time                 >= 1.8.0 && < 1.9,
      attoparsec           >= 0.13.2 && < 0.14,
      servant-server,
      containers           >= 0.6.0 && < 0.7,
      binary               >= 0.8.6 && < 0.9,
      text                 >= 1.2.3 && < 1.3,
      bencode              >= 0.6.1 && < 0.7,
      network              >= 3.1.1 && < 3.2,
      cpu                  >= 0.1.2 && < 0.2,
      mongoDB              >= 2.7.0 && < 2.8,
      split                >= 0.2.3 && < 0.3,
      hashable,
      mwc-random,
      primitive,
      http-types,
      unordered-containers >= 0.2.11 && < 0.3,
      saltine              >= 0.1.1 && < 0.2,
      time-compat          >= 1.9.3 && < 1.10,
      typesafe-endian      >= 0.1.0 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
